// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should have alt 1`] = `
<DocumentFragment>
  <img
    alt="Test alt"
    src="https://images.unsplash.com/photo-1667489022797-ab608913feeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60"
  />
</DocumentFragment>
`;

exports[`<Image /> should have class name 1`] = `
<DocumentFragment>
  <img
    class="test-cls"
    src="https://images.unsplash.com/photo-1667489022797-ab608913feeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60"
  />
</DocumentFragment>
`;

exports[`<Image /> should have test id 1`] = `
<DocumentFragment>
  <img
    data-testid="test-id"
    src="https://images.unsplash.com/photo-1667489022797-ab608913feeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60"
  />
</DocumentFragment>
`;

exports[`<Image /> should render as default 1`] = `
<DocumentFragment>
  <img
    src="https://images.unsplash.com/photo-1667489022797-ab608913feeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=800&q=60"
  />
</DocumentFragment>
`;

exports[`<Image /> should render loading component 1`] = `
<DocumentFragment>
  <div>
    Loading
  </div>
</DocumentFragment>
`;
